--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>contact</li>
+        <li>about</li>
+      </ul>
+    </nav>
     <h1>Hello Git</h1>
     <h2>Another line</h2>
     <p>line 3 </p>
