home changed to my home im master branch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <ul>
-        <li>Home</li>
+        <li>my Home</li>
         <li>contact</li>
         <li>about</li>
       </ul>
