--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <p>line 4 2022 1401</p>
     <p>Another p tag added</p>
     <div class="item">Slide 1 </div>
-    
+    <div class="item">Slide 2</div>
   </body>
 </html>
