slide 3 and 4 added

--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <p>Another p tag added</p>
     <div class="item">Slide 1 </div>
     <div class="item">Slide 2</div>
+    <div class="item">Slide 3</div>
+    <div class="item">Slide 4</div>
   </body>
 </html>
